@@ -750,7 +750,7 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         assertNotNull(topicRef);
 
         Awaitility.await().untilAsserted(() -> {
-            List<String> replicaClusters = topicRef.getReplicators().keys().stream().sorted().collect(Collectors.toList());
+            List<String> replicaClusters = topicRef.getReplicators().keySet().stream().sorted().toList();
             assertEquals(replicaClusters.size(), 1);
             assertEquals(replicaClusters.toString(), "[r2]");
         });
@@ -758,7 +758,7 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         // removing topic replica cluster policy, so namespace policy should take effect
         admin1.topics().removeReplicationClusters(persistentTopicName);
         Awaitility.await().untilAsserted(() -> {
-            List<String> replicaClusters = topicRef.getReplicators().keys().stream().sorted().collect(Collectors.toList());
+            List<String> replicaClusters = topicRef.getReplicators().keySet().stream().sorted().toList();
             assertEquals(replicaClusters.size(), 2);
             assertEquals(replicaClusters.toString(), "[r2, r3]");
         });
